--- a/hw/01/q5.ipynb
+++ b/hw/01/q5.ipynb
@@ -215,6 +215,12 @@
    "source": [
     "# https://github.com/Tony-xy-Liu/cpsc445/blob/main/hw/01/q5.ipynb\n",
     "\n",
+    "# #from R:\n",
+    "# gene = pbmc@assays$RNA@var.features\n",
+    "# x = pbmc@assays$RNA@data[gene,]\n",
+    "# x = t(as.matrix(x))\n",
+    "# write.table(x, file=\"pbmc.csv\", sep = ',', row.names=TRUE, col.names=TRUE)\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -233,6 +239,14 @@
     "cells = [g for g in df.index]\n",
     "\n",
     "mat = df.to_numpy()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Top 20 genes that are highly co-expressed with gene LYZ across all cells."
    ]
   },
   {
@@ -314,6 +328,14 @@
     "    \n",
     "cd14_monos: np.ndarray = mat[selector]\n",
     "cd14_monos.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Top 20 genes that are highly co-expressed with LYZ across CD14+ monocytes."
    ]
   },
   {
@@ -404,6 +426,14 @@
     "import plotly\n",
     "import plotly.subplots as sp\n",
     "from plotly import graph_objects as go"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. LYZ vs FTL expression"
    ]
   },
   {
