--- a/hw/02/q5.ipynb
+++ b/hw/02/q5.ipynb
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "Ttest_indResult(statistic=6.201983066702088, pvalue=1.9829015768110337e-09)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,23 +707,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FCGR3A entropy of counts in FCGR3A monocytes only: 6.960693446893877\n",
-      "FCGR3A entropy of counts in all cells: 8.22584137865024\n"
+      "FCGR3A entropy of counts in FCGR3A monocytes only: 4.333533013686759\n",
+      "FCGR3A entropy of counts in all cells: 1.26858777217796\n"
      ]
     }
    ],
    "source": [
     "def entropy(vec):\n",
     "    vec = np.array(vec)\n",
-    "    p = vec/vec.sum()\n",
-    "    p = p[p != 0]\n",
+    "    uniques, counts = np.unique(vec, return_counts=True)\n",
+    "    p = counts/vec.shape[0]\n",
     "    return np.sum(-np.log2(p)*p)\n",
     "\n",
     "H_mono = entropy(counts[counts.index.isin(_get_cells(FMONO, silent=True))][\"FCGR3A\"].values)\n",
